--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+0.9.11 TOC update, catagory moved to Data Broker
 0.9.10	release (due to publishing hiccups, this moved past beta bout a week ago, so may as well be official)
 0.9.10 remove a timer, add a timer, move a timer, floor x)
 0.9.06 2025-03-04 cleaned up timers
