--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+0.10.28 table generation for localized names/map
 0.9.18 minified dashi & ldb libs
 0.9.17 beta 2025-03-19 Timers verified
 	-waypoint flair?
