--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+0.10.42 2025-05-17 added map pin to startup print. Addon description updated with command options
 0.10.40 2025-05-02 toc bump for patch 11.1.7
 0.10.30 Ace lib cleanup
 0.10.28 table generation for localized names/map
