--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+0.10.44 'p' option cleanup, no longer needed. 'rn' added for release notes
+0.10.43 map pin integrated on same line as orig print
 0.10.42 2025-05-17 added map pin to startup print. Addon description updated with command options
 0.10.40 2025-05-02 toc bump for patch 11.1.7
 0.10.30 Ace lib cleanup
