Toc bump for 11.2.7

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+0.1127.251202- remix detection working, toc bump
+0.1125.251017.alpha- addon loads before auras & runs once before remix det can trigger
+--if announcements are on, it usually triggers after detection, but..
+--if timer is 0, can still miss. If announcement is off, remix det never auto runs.
+--remix det does trigger if fft is called by command or ldb click
+--but NEEDS that startup trigger to work gah!!!!
 0.1125.251014 Remix detection very extra verified!
 0.1125.251008 Remix detection verified/added
 0.1125.251006c toc bump for 11.2.5 [testing detection for legion remix/standard retail]
