--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+0.1201.260209- toc bump
 0.1200.260203- ace3 & dashi lib update
 0.1200.260114- toc bump for midnight
 0.1127.251202- remix detection working, toc bump
